
 * src/sci_cb.c, src/symbols.c:
   Fix segfault when pressing ctrl-enter when there are no workspace
   tags (thanks to R8Rooy for reporting).
 * src/build.c, src/build.h, src/dialogs.c, src/dialogs.h,
   src/callbacks.c, src/callbacks.h:
   Move dialogs_show_includes_arguments_*() to build.c.
   Move on_includes_arguments_*dialog_response() to build.c.
   Make several build functions static.


2007-03-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/dialogs.c:
   Add Edit button to Keyboard Shortcuts dialog.
 * src/keybindings.c, src/keybindings.h, src/dialogs.c, src/dialogs.h,
   src/callbacks.c:
   Move dialogs_show_keyboard_shortcuts() to keybindings.c.
 * src/keybindings.c, src/prefs.c, src/prefs.h, src/callbacks.c,
   src/vte.c:
   Rename dialogs_show_prefs_dialog() to prefs_show_dialog().


2007-03-22  Enrico Tröger  <enrico.troeger@uvena.de>

 * THANKS, doc/geany.docbook, src/keybindings.c, src/keybindings.h,
   src/sci_cb.c, src/sci_cb.h:
   Applied patch from Anh Phạm to add a keybinding for selecting the
   current word under the cursor (thanks).


2007-03-21  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/project.c:
   Made all project dialogs modal.
 * src/main.c, src/symbols.c, src/symbols.h, tagmanager/tm_workspace.c:
   Add option --generate-tags (-g) to generate a global tags file from
   a list of source files. Currently this is only likely to work
   correctly for C source files. Run 'geany -g' for syntax info.
   Remove short option for hidden option --generate-data-files.
   Update tm_workspace_create_global_tags() from Anjuta 1.2.4a.
 * tagmanager/tm_tag.c, tagmanager/include/tm_tag.h
   Separate alternative PHP/LaTeX global tags parser into
   tm_tag_init_from_file_alt() (for easier diff with Anjuta).


2007-03-20  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.common, doc/geany.docbook, src/highlighting.c:
   Added option to change the caret width.

